--- a/config.toml
+++ b/config.toml
@@ -5,10 +5,21 @@ copyright = ""
 
 baseurl = "/"
 languageCode = "en-us"
-theme = "terminal"
+theme = "wonderland"
 paginate = 5
 
 disqusShortname = "blog-disqus-com-1"
+
+[markup]
+  [markup.highlight]
+    # codeFences = true
+    # guessSyntax = true
+    hl_Lines = ""
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = false
+    # tabWidth = 4
 
 [outputs]
   home = ["HTML", "AMP", "RSS"]
