--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@ version: 2.0
 
 jobs:
     build:
+        branches:
+            only:
+                - master
         docker:
             - image: cibuilds/hugo:latest
         working_directory: ~/dyzdyz010.github.io
