--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,6 @@ version: 2.0
 
 jobs:
     build:
-        branches:
-            only:
-                - master
         docker:
             - image: cibuilds/hugo:latest
         working_directory: ~/dyzdyz010.github.io
@@ -25,22 +22,25 @@ jobs:
                 name: Generate site
                 working_directory: ~/dyzdyz010.github.io
                 command: HUGO_ENV=production hugo --config=config.prod.toml -d ~/public
-            - deploy:
-                name: Deploy to Github Pages
-                working_directory: ~/public
-                command: |
-                    git config credential.helper 'cache --timeout=120'
-                    git config user.email "dyzdyz010@gmail.com"
-                    git config user.name "Deployment Bot"
-                    git add .
-                    git commit --allow-empty -m "Trigger deployment"
-                    git push -q git@github.com:dyzdyz010/dyzdyz010.github.io.git master
+    deploy:
+        name: Deploy to Github Pages
+        working_directory: ~/public
+        command: |
+            git config credential.helper 'cache --timeout=120'
+            git config user.email "dyzdyz010@gmail.com"
+            git config user.name "Deployment Bot"
+            git add .
+            git commit --allow-empty -m "Trigger deployment"
+            git push -q git@github.com:dyzdyz010/dyzdyz010.github.io.git master
 
 workflows:
   version: 2
-  main:
+  build-and-deploy:
     jobs:
-    - build:
-        filters:
-          branches:
-            only: source
+        - build
+        - deploy:
+            requires:
+                - build
+            filters:
+                branches:
+                only: source
