--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,12 @@ jobs:
     deploy:
         name: Deploy to Github Pages
         working_directory: ~/public
-        command: |
-            git config credential.helper 'cache --timeout=120'
-            git config user.email "dyzdyz010@gmail.com"
-            git config user.name "Deployment Bot"
-            git add .
-            git commit --allow-empty -m "Trigger deployment"
-            git push -q git@github.com:dyzdyz010/dyzdyz010.github.io.git master
+        steps:
+            - run:
+                command: |
+                    git config credential.helper 'cache --timeout=120'
+                    git config user.email "dyzdyz010@gmail.com"
+                    git config user.name "Deployment Bot"
+                    git add .
+                    git commit --allow-empty -m "Trigger deployment"
+                    git push -q git@github.com:dyzdyz010/dyzdyz010.github.io.git master
