--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
                 command: HUGO_ENV=production hugo --config=config.prod.toml -d ~/public
     deploy:
         name: Deploy to Github Pages
+        machine:
+            enabled: true
         working_directory: ~/public
         steps:
             - run:
