--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,13 @@
 version: 2.0
 
 workflows:
-    version: 2
-    build-and-deploy:
-        jobs:
-            - build
-            - deploy:
-                requires:
-                    - build
-                filters:
-                    branches:
-                        only: source
+  version: 2
+  main:
+    jobs:
+    - build:
+        filters:
+          branches:
+            only: source
 
 jobs:
     build:
@@ -34,13 +31,9 @@ jobs:
                 name: Generate site
                 working_directory: ~/dyzdyz010.github.io
                 command: HUGO_ENV=production hugo --config=config.prod.toml -d ~/public
-    deploy:
-        name: Deploy to Github Pages
-        machine:
-            enabled: true
-        working_directory: ~/public
-        steps:
-            - run:
+            - deploy:
+                name: Deploy to Github Pages
+                working_directory: ~/public
                 command: |
                     git config credential.helper 'cache --timeout=120'
                     git config user.email "dyzdyz010@gmail.com"
