--- a/config.prod.toml
+++ b/config.prod.toml
@@ -32,14 +32,18 @@ googleAnalytics = "UA-33561194-4"
     identifier = "about"
     name = "About"
     url = "/about"
+    weight = 1
+    pre = "star"
   [[menu.main]]
-    identifier = "github"
-    name = "Github"
-    url = "https://github.com/dyzdyz010"
+    identifier = "twitter"
+    name = "Twitter"
+    url = "https://twitter.com/dyzdyz010"
+    weight = 2
   [[menu.main]]
     identifier = "sarahah"
     name = "Leave me a message!"
     url = "https://dyzdyz010.sarahah.com/"
+    weight = 3
 
 [sitemap]
   changefreq = "monthly"
@@ -63,6 +67,6 @@ googleAnalytics = "UA-33561194-4"
   centerTheme = true
   # set a custom favicon (default is a `themeColor` square)
   # favicon = "favicon.ico"
-    [params.logo]
-      logoText = "Wonderland"
-      logoHomeLink = "/"
+  [params.logo]
+    logoText = "Wonderland"
+    logoHomeLink = "/"
