--- a/config.prod.toml
+++ b/config.prod.toml
@@ -8,6 +8,8 @@ languageCode = "en-us"
 theme = "wonderland"
 paginate = 5
 
+summaryLength = 2
+
 disqusShortname = "blog-disqus-com-1"
 
 googleAnalytics = "UA-33561194-4"
