--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -52,3 +52,5 @@ jobs:
           target_branch: master
           # deploy the default output dir of VuePress
           build_dir: public
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
