--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vuepress build ."
   },
   "devDependencies": {
+    "@maginapp/vuepress-plugin-katex": "^1.0.11",
     "vuepress": "1.8.2",
     "vuepress-theme-reco": "1.6.6"
   },
