--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -48,6 +48,8 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2
         with:
+          # custom domain
+          fqdn: duyizhuo.com
           # deploy to gh-pages branch
           target_branch: master
           # deploy the default output dir of VuePress
