--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -12,36 +12,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           # fetch all commits to get last updated time or other git log info
           fetch-depth: 0
 
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           # choose node.js version to use
-          node-version: '14'
-
-      # cache node_modules
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        id: npm-cache
-        with:
-          path: |
-            **/node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
+          node-version: '16'
+          # cache node_modules
+          cache: 'yarn'
 
       # install dependencies if the cache did not hit
       - name: Install dependencies
         if: steps.npm-cache.outputs.cache-hit != 'true'
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       # run build script
-      - name: Build VuePress site
-        run: npm run build
+      - name: Build VitePress site
+        run: yarn build
 
       # please check out the docs of the workflow for more details
       # @see https://github.com/crazy-max/ghaction-github-pages
@@ -53,6 +44,6 @@ jobs:
           # deploy to gh-pages branch
           target_branch: master
           # deploy the default output dir of VuePress
-          build_dir: public
+          build_dir: .vitepress/dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
