--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gray-matter": "^4.0.3",
     "postcss": "^8.4.13",
     "postcss-import": "^14.1.0",
+    "prompt-sync": "^4.2.0",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
     "vitepress": "^0.22.3"
@@ -26,7 +27,8 @@
     "docs:serve": "vitepress serve docs",
     "dev": "vitepress dev",
     "build": "vitepress build",
-    "serve": "vitepress serve"
+    "serve": "vitepress serve",
+    "newpost": "node commands.ts newpost"
   },
   "dependencies": {
     "katex": "^0.15.3"
