--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "fs-extra": "^10.1.0",
     "globby": "^11.1.0",
     "gray-matter": "^4.0.3",
+    "mermaid": "^9.1.7",
     "postcss": "^8.4.13",
     "postcss-import": "^14.1.0",
     "prompt-sync": "^4.2.0",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
-    "vitepress": "^0.22.3"
+    "vitepress": "^0.22.3",
+    "vitepress-plugin-mermaid": "^2.0.8"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
